--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -3,6 +3,8 @@ sidebar_position: 5
 sidebar_label: Create Interstitial component
 ---
 
+import Admonition from 'react-admonitions';
+
 import { Storytelling } from '@kickstartds/content';
 // TODO check why TextMedia doesn't work here, errors with:
 // `Module not found: Error: Package path ./dist/photoswipe-ui-default is not exported from package /home/julrich/Projects/Frontend/code/kickstartDS/node_modules/photoswipe`
@@ -835,6 +837,18 @@ TODO: this is missing
 </CH.Scrollycoding>
 
 This concludes the creation of our new `Interstitial` component. It's now ready to be used inside your Design System, and available to your down stream consumers... hopefully efficiently closing a gap!
+
+## Use of `Storybook`
+
+If you're using `Storybook`, you can follow this part of the example to get all the integration goodness possible with **kickstartDS**!
+
+<Admonition type="tip" title="`Storybook` setup">
+  This guide assumes you're using a set up like described in our [Create your
+  Design System](../../create.mdx) guide! Be sure to adapt commands and
+  configuration to your use accordingly, when following this part!
+</Admonition>
+
+TODO actually add guide
 
 ## Completed component
 
