--- a/packages/tools/docusaurus/docs/guides/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/create.mdx
@@ -55,6 +55,18 @@ Additionally you might not use `nvm` for `Node` version management. Just skip th
 
 </Admonition>
 
+Next we'll add a `.gitignore` file to the repository, that will be built up through the following sections to exclude generated code files:
+
+```bash
+$ touch .gitignore
+```
+
+Add the `node_modules` folder to it for now:
+
+```bash .gitignore
+node_modules
+```
+
 <CH.Section>
 Then we'll add a `.nvmrc` file specifying the use of `Node` `16.14` for this project (this is the version **kickstartDS** currently works off of) to our project root:
 
@@ -108,6 +120,10 @@ Enter the prompted information, and you'll end up with a `package.json` describi
 16.14
 ```
 
+```bash .gitignore
+node_modules
+```
+
 </CH.Code>
 
 </CH.Section>
@@ -154,6 +170,15 @@ We'll pretend to start fresh:
   "license": "MIT"
 }
 ```
+
+```bash .nvmrc
+16.14
+```
+
+```bash .gitignore
+node_modules
+```
+
 </CH.Code>
 
 ---
@@ -203,7 +228,7 @@ $ yarn add react@17 react-dom@17
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4865.0",
+    "@kickstartds/base": "2.0.0-canary.922.4908.0",
     "react": "17",
     "react-dom": "17"
   }
@@ -214,7 +239,7 @@ $ yarn add react@17 react-dom@17
 Next we'll add the `kickstartDS` dependencies themselves. We start out by adding our `base` module (`@kickstartds/base`), which contains all of the base components, to get started:
 
 ```bash
-$ yarn add @kickstartds/base@2.0.0-canary.922.4865.0
+$ yarn add @kickstartds/base@2.0.0-canary.922.4908.0
 ```
 
 Learn more about the different modules **kickstartDS** has to offer in our [overview here](#). TODO link to overview of modules here
@@ -237,7 +262,7 @@ This will leave us with the following files for now, at least if you've started 
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4865.0",
+    "@kickstartds/base": "2.0.0-canary.922.4908.0",
     "react": "17",
     "react-dom": "17"
   }
@@ -246,6 +271,10 @@ This will leave us with the following files for now, at least if you've started 
 
 ```bash .nvmrc
 16.14
+```
+
+```bash .gitignore
+node_modules
 ```
 
 </CH.Code>
@@ -265,10 +294,10 @@ Applying your branding and corporate design to **kickstartDS** is itself done in
 
 #### Initialization
 
-We start by creating a new file: `token-primitives.json` at our project root:
+We start by creating a new file: `branding-token.json` at our project root:
 
 ```bash
-$ touch token-primitives.json
+$ touch branding-token.json
 ```
 
 This will hold all of our `Branding Token`. Those are used to initialize you first Design Token set, and especially ease first-time setup.<br/>
@@ -276,7 +305,7 @@ Get the most up-to-date version of its content [from here](https://github.com/ki
 
 <CH.Section>
 <CH.Code>
-```json token-primitives.json
+```json branding-token.json
 {
   "color": {
     "primary": "#333",
@@ -369,7 +398,7 @@ Get the most up-to-date version of its content [from here](https://github.com/ki
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4865.0",
+    "@kickstartds/base": "2.0.0-canary.922.4908.0",
     "react": "17",
     "react-dom": "17"
   }
@@ -378,6 +407,10 @@ Get the most up-to-date version of its content [from here](https://github.com/ki
 
 ```bash .nvmrc
 16.14
+```
+
+```bash .gitignore
+node_modules
 ```
 
 </CH.Code>
@@ -414,12 +447,12 @@ But to get a first feel for working with the file, and to add some flavour to ou
 So let's get into it:
 
 <CH.Scrollycoding>
-##### Start with copied `token-primitives.json`
+##### Start with copied `branding-token.json`
 
 This is the file you've copied before, we'll start updating it piecemeal to show off common ways of design application.
 
 <CH.Code>
-```json token-primitives.json
+```json branding-token.json
 {
   "color": {
     "primary": "#333",
@@ -512,7 +545,7 @@ This is the file you've copied before, we'll start updating it piecemeal to show
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4865.0",
+    "@kickstartds/base": "2.0.0-canary.922.4908.0",
     "react": "17",
     "react-dom": "17"
   }
@@ -521,6 +554,10 @@ This is the file you've copied before, we'll start updating it piecemeal to show
 
 ```bash .nvmrc
 16.14
+```
+
+```bash .gitignore
+node_modules
 ```
 
 </CH.Code>
@@ -534,7 +571,7 @@ Most brands have such a `primary` color as part of their corporate design guidel
 Next to `primary` itself, we'll also define its counter part `primary-inverted` as `#ecff00` (`#fff` / `white` works for most uses otherwise, read about the finer [details here](#) TODO add link).
 
 <CH.Code>
-```json token-primitives.json focus=2:4
+```json branding-token.json focus=2:4
 {
   "color": {
     "primary": "#05566a",
@@ -623,6 +660,10 @@ Next to `primary` itself, we'll also define its counter part `primary-inverted` 
 
 ```
 
+```bash .gitignore
+
+```
+
 </CH.Code>
 
 ---
@@ -634,7 +675,7 @@ For this guide we'll have just change the `foreground` color, but this will infl
 Additionally we'll define some slightly different colors for our `link` and `link-inverted` (they always come in pairs!), to make it unique.
 
 <CH.Code>
-```json token-primitives.json focus=2:4,6:8
+```json branding-token.json focus=2:4,6:8
 {
   "color": {
     "primary": "#05566a",
@@ -723,6 +764,10 @@ Additionally we'll define some slightly different colors for our `link` and `lin
 
 ```
 
+```bash .gitignore
+
+```
+
 </CH.Code>
 
 ---
@@ -734,7 +779,7 @@ There are a bunch of tokens that, for lack of a better explanation, relate to th
 Because it seems to fit our branding, and doesn't interfere with user expectations otherwise, we'll change `informative` (and you guessed it, `informative-inverted`) to our `primary` color.
 
 <CH.Code>
-```json token-primitives.json focus=2:4,6:8,11:12
+```json branding-token.json focus=2:4,6:8,11:12
 {
   "color": {
     "primary": "#05566a",
@@ -823,6 +868,10 @@ Because it seems to fit our branding, and doesn't interfere with user expectatio
 
 ```
 
+```bash .gitignore
+
+```
+
 </CH.Code>
 
 ---
@@ -832,7 +881,7 @@ Because it seems to fit our branding, and doesn't interfere with user expectatio
 In this guide we'll opt for a native system font stack for our `display` and `copy` fonts. We'll leave `interface` and `mono` and all size values untouched for now. If you have other requirements (for example a self-hosted font, or one by Google Fonts) have a look at our [Fonts guide](#) TODO create and link guide.
 
 <CH.Code>
-```json token-primitives.json focus=18:20,29:30
+```json branding-token.json focus=18:20,29:30
 {
   "color": {
     "primary": "#05566a",
@@ -921,6 +970,10 @@ In this guide we'll opt for a native system font stack for our `display` and `co
 
 ```
 
+```bash .gitignore
+
+```
+
 </CH.Code>
 
 ---
@@ -932,7 +985,7 @@ As we have a pretty dense layout in mind, we reduce `spacing` > `scale-ratio` an
 We keep the general spacing of `8px`, though. We'll also leave the rest of the values untouched as they'll work just fine for this guide!
 
 <CH.Code>
-```json token-primitives.json focus=63,65:66
+```json branding-token.json focus=63,65:66
 {
   "color": {
     "primary": "#05566a",
@@ -1021,6 +1074,10 @@ We keep the general spacing of `8px`, though. We'll also leave the rest of the v
 
 ```
 
+```bash .gitignore
+
+```
+
 </CH.Code>
 
 </CH.Scrollycoding>
@@ -1054,15 +1111,15 @@ Then add the following two lines to your `package.json` scripts block:
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4865.0",
-    "kickstartds": "^0.2.29",
+    "@kickstartds/base": "2.0.0-canary.922.4908.0",
+    "kickstartds": "0.2.31",
     "react": "17",
     "react-dom": "17"
   }
 }
 ```
 
-```json token-primitives.json
+```json branding-token.json
 {
   "color": {
     "primary": "#05566a",
@@ -1147,6 +1204,10 @@ Then add the following two lines to your `package.json` scripts block:
 16.14
 ```
 
+```bash .gitignore
+node_modules
+```
+
 </CH.Code>
 
 #### Generate your first Design Token set
@@ -1157,12 +1218,184 @@ Generate your first full set of Design Token by calling:
 $ yarn init-tokens
 ```
 
-This uses your `token-primitives.json` as an input, and generates a folder `tokens` for you. That folder holds `JSON` files defining your Design Token by category:
+This uses your `branding-token.json` as an input, and generates a folder `tokens` for you. That folder holds `JSON` files defining your Design Token by category:
 
 - Category 1
 - Category 2
 
 TODO: describe this is more of a first-time / one-time use of thing
+
+#### Compile Design tokens
+
+Finally, to test the integration works as expected, we'll want to create one additional file: `sd.config.js`. As the name may imply, this is further configuration for our Design Tokens (more specifically the Style Dictionary that gets used under the hood) to convert them into different outputs:
+
+<CH.Code>
+```js sd.config.cjs
+const path = require('path');
+const StyleDictionary = require("style-dictionary");
+const { config } = require("@kickstartds/core/design-tokens");
+
+module.exports = StyleDictionary.extend(config).extend({
+source: [
+"tokens/**/*.json",
+path.join(path.dirname(require.resolve('@kickstartds/core/package.json')), 'source/design-tokens/icons/*.svg')
+],
+platforms: {
+css: {
+buildPath: 'src/'
+},
+scss: {
+buildPath: 'src/'
+},
+html: {
+buildPath: 'src/'
+},
+jsx: {
+buildPath: '.storybook/'
+},
+storybook: {
+buildPath: '.storybook/'
+},
+js: {
+transforms: ["attribute/cti", "name/cti/pascal", "size/rem", "color/css"],
+buildPath: ".storybook/",
+files: [
+{
+destination: "tokens.js",
+format: "javascript/es6",
+},
+],
+},
+},
+});
+
+````
+
+```json package.json
+{
+  "name": "@my/design-system",
+  "version": "1.0.0",
+  "description": "Design System for all @MY needs",
+  "main": "dist/index.js",
+  "scripts": {
+    "init-tokens": "kickstartDS tokens init --cleanup --rc-only",
+    "build-tokens": "kickstartDS tokens compile --cleanup --rc-only",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Jonas Ulrich",
+  "license": "MIT",
+  "dependencies": {
+    "@kickstartds/base": "2.0.0-canary.922.4908.0",
+    "kickstartds": "0.2.31",
+    "react": "17",
+    "react-dom": "17"
+  }
+}
+````
+
+```json branding-token.json
+{
+  "color": {
+    "primary": "#05566a",
+    "primary-inverted": "#ecff00",
+    "background": "#fff",
+    "foreground": "#050505",
+    "link": "#5D5DD5",
+    "link-inverted": "#C6C6FF",
+    "positive": "#66a80f",
+    "positive-inverted": "#94d82d",
+    "informative": "#05566a",
+    "informative-inverted": "#ecff00",
+    "notice": "#fab005",
+    "notice-inverted": "#f59f00",
+    "negative": "#e03131",
+    "negative-inverted": "#fa5c5c"
+  },
+  "font": {
+    "display": {
+      "family": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+      "font-size": 16,
+      "line-height": 1.75,
+      "scale-ratio": 1.225,
+      "bp-factor": {
+        "phone": 1.167,
+        "tablet": 1.333
+      }
+    },
+    "copy": {
+      "family": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+      "font-size": 16,
+      "line-height": 1.75,
+      "scale-ratio": 1.225,
+      "bp-factor": {
+        "tablet": 1.125
+      }
+    },
+    "interface": {
+      "family": "system-ui, -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Segoe UI', 'Lucida Grande', 'Helvetica Neue', 'Helvetica', 'Fira Sans', 'Roboto', 'Noto', 'Droid Sans', 'Cantarell', 'Oxygen', 'Ubuntu', 'Franklin Gothic Medium', 'Century Gothic', 'Liberation Sans', sans-serif",
+      "font-size": 16,
+      "line-height": 1.75,
+      "scale-ratio": 1.225,
+      "bp-factor": {
+        "tablet": 1.125
+      }
+    },
+    "mono": {
+      "family": "ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, 'Liberation Mono', monospace",
+      "font-size": 16,
+      "line-height": 1.75,
+      "scale-ratio": 1.225,
+      "bp-factor": {
+        "tablet": 1.125
+      }
+    }
+  },
+  "font-weight": {
+    "light": 300,
+    "regular": 400,
+    "semi-bold": 600,
+    "bold": 700
+  },
+  "spacing": {
+    "base": 8,
+    "scale-ratio": 1.35,
+    "bp-ratio": 1.15
+  },
+  "border-radius": "2px",
+  "box-shadow": {
+    "blur": "2.75px"
+  },
+  "breakpoints": {
+    "phone": 576,
+    "tablet": 768,
+    "laptop": 992,
+    "desktop": 1200
+  }
+}
+```
+
+```bash .nvmrc
+16.14
+```
+
+```bash .gitignore
+node_modules
+```
+
+</CH.Code>
+
+<Admonition type="tip" title="Using correct file extension">
+  It's important to actually use `cjs` as the file extension here. TODO we
+  should add an actual explanation here!
+</Admonition>
+
+We basically use the configuration provided by... TODO how does correct, current `sd.config.cjs` look like? Shouldn't it be `@kickstartds/style-dictionary`?
+TODO add description which paths are configured here
+TODO can Storybook / any task be actively stopped from running by extension? return `false`?
+
+<br />
+Read more about [our usage of it](#) TODO add link or [how you can benefit](#) TODO
+add link.
 
 ### Fine tune the design
 
